[package]
name = "rusths"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
lazy_static = "1.4"
rand = "0.9.1"
once_cell = "1.19"


[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "tick_3s"
path = "examples/tick_3s.rs"